# c-py-py

./: README.md  pyproject.toml
src/cpp/: __init__.py
tests/: test_cpp.py
